Bug 923486, part 2 - Define NS_IsMainThread out-of-line in ASAN builds. r=ehsan